hphp/hack/test/typecheck/unbound_name/obj_get.php.exp
File "obj_get.php", line 9, characters 13-15:
Unbound name: `bar` (a global constant) (Naming[2049])
File "obj_get.php", line 9, characters 13-15:
Unbound global constant (Typing) (Typing[4106])
